--- a/package.json
+++ b/package.json
@@ -30,17 +30,20 @@
     "cordova-plugin-ionic-webview": "^1.1.11",
     "cordova-plugin-splashscreen": "~4.0.1",
     "cordova-plugin-whitelist": "1.3.1",
+    "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "~2.2.1",
     "ionicons": "3.0.0",
-    "mongoose": "^4.13.6",
+    "mongodb": "^3.0.2",
+    "mongoose": "^4.10.6",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.4",
+    "@types/node": "^9.4.6",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
