--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.4",
+    "@ionic/app-scripts": "^3.1.8",
     "@types/node": "^9.4.6",
     "typescript": "2.4.2"
   },
