--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.1",
+    "date-fns": "^1.29.0",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "ionic-angular": "3.9.2",
