--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ionicons": "3.0.0",
     "mongodb": "^3.0.2",
     "mongoose": "^4.10.6",
+    "ng-socket-io": "^0.2.4",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
