--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "mongoose": "^4.10.6",
     "ng-socket-io": "^0.2.4",
     "rxjs": "5.5.2",
+    "socket.io-client": "^2.1.0",
+    "socketio": "^1.0.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
