--- a/package.json
+++ b/package.json
@@ -20,14 +20,21 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/file": "^4.7.0",
+    "@ionic-native/file-transfer": "^4.7.0",
     "@ionic-native/http": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "6.3.0",
     "cordova-ios": "4.5.4",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-filepath": "^1.3.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.4.1",
@@ -40,7 +47,10 @@
     "ionicons": "3.0.0",
     "mongodb": "^3.0.2",
     "mongoose": "^4.10.6",
+    "multer": "^1.3.0",
+    "ng-chat": "^1.0.10",
     "ng-socket-io": "^0.2.4",
+    "ng2-password-strength-bar": "^1.2.0",
     "rxjs": "5.5.2",
     "socket.io-client": "^2.1.0",
     "socketio": "^1.0.0",
@@ -60,7 +70,11 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "ios",
