--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/base64": "^4.7.0",
     "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/file": "^4.7.0",
     "@ionic-native/file-transfer": "^4.7.0",
     "@ionic-native/http": "^4.5.3",
+    "@ionic-native/image-picker": "^4.7.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "6.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "com-badrit-base64": "^0.2.0",
+    "cordova-android": "7.0.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^1.1.4",
@@ -38,12 +42,15 @@
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-telerik-imagepicker": "^2.2.0",
     "cordova-plugin-whitelist": "^1.3.1",
     "date-fns": "^1.29.0",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
+    "ionic-ratings": "^0.3.0",
+    "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
     "mongodb": "^3.0.2",
     "mongoose": "^4.10.6",
@@ -51,6 +58,7 @@
     "ng-chat": "^1.0.10",
     "ng-socket-io": "^0.2.4",
     "ng2-password-strength-bar": "^1.2.0",
+    "ngx-bootstrap-modal": "^2.0.1",
     "rxjs": "5.5.2",
     "socket.io-client": "^2.1.0",
     "socketio": "^1.0.0",
@@ -74,7 +82,11 @@
       "cordova-plugin-camera": {},
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-filepath": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "com-badrit-base64": {},
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "allow photos"
+      }
     },
     "platforms": [
       "ios",
