--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/file-transfer": "^4.7.0",
     "@ionic-native/http": "^4.5.3",
     "@ionic-native/image-picker": "^4.7.0",
+    "@ionic-native/native-geocoder": "^4.7.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
@@ -40,6 +41,7 @@
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filepath": "^1.3.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-nativegeocoder": "^3.1.1",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-telerik-imagepicker": "^2.2.0",
@@ -52,6 +54,7 @@
     "ionic-ratings": "^0.3.0",
     "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
+    "moment": "^2.22.2",
     "mongodb": "^3.0.2",
     "mongoose": "^4.10.6",
     "multer": "^1.3.0",
@@ -68,6 +71,7 @@
   "devDependencies": {
     "@ionic/app-scripts": "^3.1.8",
     "@types/node": "^9.4.6",
+    "api-ai-javascript": "^2.0.0-beta.21",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
@@ -86,7 +90,8 @@
       "com-badrit-base64": {},
       "cordova-plugin-telerik-imagepicker": {
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "allow photos"
-      }
+      },
+      "cordova-plugin-nativegeocoder": {}
     },
     "platforms": [
       "ios",
