--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@ionic/storage": "2.1.3",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "com-badrit-base64": "^0.2.0",
-    "cordova-android": "7.0.0",
+    "cordova-android": "6.3.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^1.1.4",
@@ -51,6 +51,7 @@
     "font-awesome": "^4.7.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
+    "ionic-process-spinner": "0.0.1",
     "ionic-ratings": "^0.3.0",
     "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
@@ -72,6 +73,7 @@
     "@ionic/app-scripts": "^3.1.8",
     "@types/node": "^9.4.6",
     "api-ai-javascript": "^2.0.0-beta.21",
+    "ngx-accordion": "0.0.17",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
